--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -37,4 +37,4 @@ jobs:
       #     cache: "pnpm"
 
       # - run: pnpm install --frozen-lockfile
-      # - run: pnpm run ci
+      - run: pnpm ci
